--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -7,25 +7,26 @@ left_links:
     link: /#
   - name: オフィシャルグッズ
     link: https://suzuri.jp/C4Y
+    new_window: true
   - name: お問い合わせ
     link: /contact/
 right_links:
   - name:
-    link: https://facebook.com/cloudcannon
+    link: https://www.facebook.com/code4yokohama
     new_window: true
     social_icon: Facebook
+  # - name:
+  #   link: https://twitter.com/cloudcannon
+  #   social_icon: Twitter
+  #   new_window: true
   - name:
-    link: https://twitter.com/cloudcannon
-    social_icon: Twitter
-    new_window: true
-  - name:
-    link: https://youtube.com/c/cloudcannon
+    link: https://www.youtube.com/channel/UCphyzWRJWpD0sQBUqNzw1kw
     social_icon: YouTube
     new_window: true
-  - name:
-    link: https://instagram.com/
-    social_icon: Instagram
-    new_window: true
+  # - name:
+  #   link: https://instagram.com/
+  #   social_icon: Instagram
+  #   new_window: true
   - name:
     link: /feed.xml
     social_icon: RSS
