--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Code for YOKOHAMA
 url: "https://code4.yokohama/"
 baseurl:
-google_analytics_key:
+google_analytics_key: UA-59974413-3
 google_maps_javascript_api_key:
 disqus_shortname:
 
