--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,15 @@ paginate: 10
 paginate_path: "/blog/:num/"
 
 jekyll-archives:
-  enabled: ['categories']
+  enabled:
+    - categories
+    - tags
+  layouts:
+    category: category_archive
+    tag: tag_archive
+  permalinks:
+    category: '/category/:name/'
+    tag: '/tag/:name/'
 
 defaults:
   -
