--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 - name: Code for YOKOHAMAについて
   link: /about/
 - name: プロジェクト
+  link: /projects/
+- name: ニュース
   link: /blog/
-- name: レポート
-  link: /#
 - name: オフィシャルグッズ
   link: https://suzuri.jp/C4Y
   new_window: true
