--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,7 @@ collections:
     _hide_content: true
     _icon: account_circle
   projects:
+    output: true
 
 paginate: 10
 paginate_path: "/blog/:num/"
