jekyllプラグインをインストールしてから静的ページ生成させる

--- a/_config.yml
+++ b/_config.yml
@@ -147,3 +147,6 @@ social_icons:
 _comments:
   description: Text shown when sharing on social media
   blurb: Short bio or description of this person
+
+# ---- fixed github metadata authentication bug ----
+github : [metadata]
