--- a/_config.yml
+++ b/_config.yml
@@ -150,3 +150,6 @@ _comments:
 
 # ---- fixed github metadata authentication bug ----
 github : [metadata]
+
+exclude:
+  - _posts/0000-00-00-welcome-to-jekyll.markdown
