--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl:
 google_analytics_key: UA-59974413-3
 google_maps_javascript_api_key:
 disqus_shortname:
-repository_nwo: nichesuch/code4yokohama.github.io
+repository: nichesuch/code4yokohama.github.io
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
