--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Code for YOKOHAMA
 url: https://nichesuch.github.io/code4yokohama.github.io
-baseurl: 
+baseurl: /
 google_analytics_key: UA-59974413-3
 google_maps_javascript_api_key:
 disqus_shortname:
