--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -19,5 +19,6 @@ jobs:
       - uses: helaili/jekyll-action@v2
         env:
           JEKYLL_PAT: ${{ secrets.JEKYLL_PAT }}
+          JEKYLL_DEBUG: true
         with:
           target_branch: 'gh-pages'
