Add google maps API key

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: Code for YOKOHAMA
 url: "https://code4yokohama.github.io"
 baseurl:
 google_analytics_key: UA-59974413-3
-google_maps_javascript_api_key:
+google_maps_javascript_api_key: AIzaSyAdu6c_0jKlOFREVTTBMmFF-6pbCvoQrzQ
 disqus_shortname:
 repository: Code4Yokohama/code4yokohama.github.io
 
