--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ repository: Code4Yokohama/code4yokohama.github.io
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: App marketing template for Jekyll.
+description: Technology for Social Innovation.
 author:
   name:
   email:
