--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: Code for YOKOHAMA
-url: "https://code4yokohama.github.io"
+url: "https://code4.yokohama"
 baseurl:
 google_analytics_key: UA-59974413-3
 google_maps_javascript_api_key: AIzaSyAdu6c_0jKlOFREVTTBMmFF-6pbCvoQrzQ
