--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl:
 google_analytics_key: UA-59974413-3
 google_maps_javascript_api_key: AIzaSyAdu6c_0jKlOFREVTTBMmFF-6pbCvoQrzQ
 disqus_shortname:
-repository: Code4Yokohama/code4yokohama.github.io
+repository: Code4Yokohama/code4.yokohama
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
